--- a/Sources/Application/Mmu.AzureDevOpsWikiBackupSystem.csproj
+++ b/Sources/Application/Mmu.AzureDevOpsWikiBackupSystem.csproj
@@ -6,9 +6,13 @@
     <CodeAnalysisRuleSet>..\..\CA_ProductionCode.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
-    <PackageReference Include="Mmu.Mlazh.AzureApplicationExtensions" Version="2.1.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\MLAZH\MLAZH.AzureApplicationExtensions\Sources\Application\Mmu.Mlazh.AzureApplicationExtensions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -18,8 +22,5 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Areas\SubAreas\" />
   </ItemGroup>
 </Project>
