--- a/Sources/Application/Mmu.AzureDevOpsWikiBackupSystem.csproj
+++ b/Sources/Application/Mmu.AzureDevOpsWikiBackupSystem.csproj
@@ -8,11 +8,8 @@
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.26.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Mmu.Mlazh.AzureApplicationExtensions" Version="2.1.34" />
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\MLAZH\MLAZH.AzureApplicationExtensions\Sources\Application\Mmu.Mlazh.AzureApplicationExtensions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
